# comp0035-tutorial9

./: README.md  comp0035-tutorial9.md  pyproject.toml
data/: paralympic_events.csv
src/paralympics/: models.py
tests/: test_models.py
tutorial-instructions/: comp0035-tutorial9.md
